--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -20,7 +20,7 @@ frames = 100                 # <int> number of frames of video. Proportional to 
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 2400                    # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 2400                    # [s] <float> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -79,7 +79,9 @@ color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maxi
 mass = 1.0 * m_sun                   # [kg]
 radius = 1.0 * r_sun                 # [m]
 luminosity = 1.0 * l_sun             # [W]
-limb_darkening_parameter_type = a    # q (Kipping parameters q1,q2) or u (quadratic law parameters u1,u2) or a (polynomial coefficients a0,a1,a2)
+limb_darkening_parameter_type = a    # q (Kipping parameters q1,q2) or
+                                     # u (quadratic law parameters u1,u2) or
+                                     # a (polynomial coefficients a0,a1,a2)
 limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients. Here a0, a1, a2
 
 
@@ -89,7 +91,9 @@ color = 0.99, 0.44, 0.22             # RGB value in animation. Minimum = 0, maxi
 mass = 0.5 * m_sun                   # [kg]
 radius = 0.7 * r_sun                 # [m]
 luminosity = 0.6 * l_sun             # [W]
-limb_darkening_parameter_type = q    # q (Kipping parameters) or u (quadratic law parameters) or a (polynomial coefficients)
+limb_darkening_parameter_type = q    # q (Kipping parameters) or
+                                     # u (quadratic law parameters u1,u2) or
+                                     # a (polynomial coefficients a0,a1,a2)
 limb_darkening = [0.5, 0.3]          # Limb darkening coefficients. Here q1, q2
 e = 0.8                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
