--- a/configurations/TOI-4504_out.ini
+++ b/configurations/TOI-4504_out.ini
@@ -23,7 +23,7 @@ frames = 760                 # <int> number of frames of video. Proportional to 
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 20                      # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 20                      # [s] <float> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
