--- a/configurations/TIC470710327.ini
+++ b/configurations/TIC470710327.ini
@@ -18,7 +18,7 @@ frames = 300                 # <int> number of frames of video. Proportional to 
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 10                      # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 10                      # [s] <float> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
