--- a/configurations/TIC470710327_old.ini
+++ b/configurations/TIC470710327_old.ini
@@ -18,7 +18,7 @@ v_earth = 2.97852e4         # [m/s] <float> earth orbital velocity (if orbit was
 video_file = animations/TIC470710327_new.mp4  # <string> the resulting video is saved with this file name
 frames = 30               # <int>   number of frames of video. Proportional to this program's run time and to the lenght of the animation.
 fps = 30                  # <int>   frames per second in video. Proportional to the velocity of the objects in the animation. Inverse proportional to lenght of video.
-dt = 60                   # [s] <int>   time difference between iterations. Proportional to the velocity of the objects in the animation. Needs to be small in order to calculate accurately when objects are near to each other.
+dt = 60                   # [s] <float>   time difference between iterations. Proportional to the velocity of the objects in the animation. Needs to be small in order to calculate accurately when objects are near to each other.
 sampling_rate = 6         # <int>   Calculating the physics is much faster than animating it. Therefore only 1/sampling_rate of the calculated iterations is used as frame in the animation.
 
 [Scale]
