--- a/configurations/TOI-4504.sec89.ini
+++ b/configurations/TOI-4504.sec89.ini
@@ -19,13 +19,13 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 comment = params as in Vitkova paper
-video_file = ../animations/TOI-4504.demo.mp4  # <string> the resulting video is saved in this file
-result_file = ../results/TOI-4504.demo.json  # <string> simulation results like transit times are saved in this file
-frames = 1                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
+frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 600                    # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 600                      # [s] <float> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -33,7 +33,8 @@ dt = 600                    # [s] <int> real time difference between simulation 
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 1000    # <int> Calculating the physics is much faster than animating it. Therefore only
+;sampling_rate = 12*(2520000-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 12*(2460800-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -79,18 +80,18 @@ limb_darkening = [0.4765, 0.3495]  # paper contains different parameters q1, q2 
 limb_darkening_parameter_type = q
 
 
-[TOI-4504b]
-body_type = planet
-color = 0.99, 0.01, 0.01
-mass = 10.4 * m_earth
-radius = 2.691 * r_earth
-e = 0.0
-i = 87.4
-P = 3600 * 24 * 2.42614
-longitude_of_ascending_node = 0
-argument_of_periapsis = 90
-T = 0
-t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
+;[TOI-4504b]
+;body_type = planet
+;color = 0.99, 0.01, 0.01
+;mass = 10.4 * m_earth
+;radius = 2.691 * r_earth
+;e = 0.0
+;i = 87.4
+;P = 3600 * 24 * 2.42614
+;longitude_of_ascending_node = 0
+;argument_of_periapsis = 90
+;T = 0
+;t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
 
 [TOI-4504c]
@@ -112,8 +113,8 @@ color = 0.01, 0.99, 0.01
 mass = (1.4166 - 0 * 0.0649) * m_jup  # +-0.0649
 radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445 - 0 * 0.001 # +-0.001
-i = 84.74 - 0 * 0.29 # +-0.29
+i = 88.8  # Vitkova 84.74
 P = 3600 * 24 * (40.5634 - 0 * 0.0366) # valid for epoch BJD = 2458400    +-0.0366
 longitude_of_ascending_node = 0  # Ω unknown
 argument_of_periapsis = 93.5 - 0 * 6  # +-6
-ma = 280.6 - 0 * 7.4  # +-7.4
+ma = 142.0 # Vitkova 280.6
