--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 /.idea
 /.ipynb_checkpoints
 /__pychache
-/src/curvesimulator/__pychache
-/src/dist/
-/src/build/
-/src/curvesimulator.egg-info/
-/src/MyFirstVideo.mp4
 /animations/old/
-/research/star_systems/TOI-4504/lightkurve/too large/
+/animations/TOI-4504.mp4
 /evaluation/rebound.html
+/research/star_systems/TOI-4504/lightkurve/too large/
+/src/build/
+/src/curvesimulator/__pychache
+/src/curvesimulator.egg-info/
+/src/dist/
+/src/MyFirstVideo.mp4
