--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /.ipynb_checkpoints
 /__pychache
 /animations/old/
-/animations/TOI-4504.mp4
+/animations/TOI-4504.fit2.mp4
 /evaluation/rebound.html
 /research/star_systems/TOI-4504/lightkurve/too large/
 /src/build/
