--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -19,7 +19,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 comment = params as in Vitkova paper
-video_file = ../animations/TOI-4504_oR.mp4  # <string> the resulting video is saved in this file
+video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
 frames = 64                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
@@ -110,11 +110,11 @@ ma = 173.1 - 0 * 2  # +-2
 [TOI-4504d]
 body_type = planet
 color = 0.01, 0.99, 0.01
-mass = (1.4166 - 0 * 0.0649) * m_jup  # +-0.0649
-radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445 - 0 * 0.001 # +-0.001
-i = 88.85 - 0 * 0.29 # 84.74 +-0.29
-P = 3600 * 24 * (40.5634 - 0 * 0.0366) # valid for epoch BJD = 2458400    +-0.0366
+mass = 1.4166 * m_jup  # 1.4166 * m_jup +-0.0649
+radius = 1.012 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
+e = 0.0445 # 0.0445 +-0.001
+i = 88.8 # 84.74 +-0.29
+P = 3600 * 24 * 40.986  # 40.5634  +-0.0366 valid for epoch BJD = 2458400
 longitude_of_ascending_node = 0  # Ω unknown
-argument_of_periapsis = 93.5 - 0 * 6  # +-6
-ma = 280.6 - 0 * 7.4  # +-7.4
+argument_of_periapsis = 93.5  # 93.5 +-6
+ma = 270  # 280.6 +-7.4
