--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -16,6 +16,9 @@ m_jup = 1.8981246e27         # [kg]  <float> Jupiter mass
 r_earth = 6.378135e6         # [m]   <float> Earth radius R⊕
 m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular) V⊕
+hour = 60 * 60
+day = hour * 24
+year = day * 365.25
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 comment = params as in Vitkova paper
