--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -24,7 +24,7 @@ year = day * 365.25
 comment = params as in Vitkova paper
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
-frames = 10                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 100                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -37,7 +37,7 @@ dt = 600                     # [s] <float> real time difference between simulati
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
 ;sampling_rate = 12*(2520000-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
-sampling_rate = 24*6.1         # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 4000         # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
