--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -63,7 +63,8 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # If necessary, scaling will be done logarithmically instead of linear.
 
 [Plot]
-start_date = 2458400.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation
+start_date = 2458400.011       # <float> Barycentric Julian Date (TDB) at the start of the simulation. Often called t0.
+;start_date = 2458400.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation. Often called t0.
 ;adjust the following plot parameters in this section only if the plots do not fit well on your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
@@ -116,7 +117,7 @@ color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup  # 1.4166 * m_jup +-0.0649
 radius = 1.012 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445 # 0.0445 +-0.001
-i = 88.8 # 84.74 +-0.29
+i = 87.8 # 84.74 +-0.29
 P = 3600 * 24 * 40.986  # 40.5634  +-0.0366 valid for epoch BJD = 2458400
 longitude_of_ascending_node = 0  # Ω unknown
 argument_of_periapsis = 93.5  # 93.5 +-6
