--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -19,6 +19,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 hour = 60 * 60
 day = hour * 24
 year = day * 365.25
+;verbose = False              # If False, only error messages will be printed to the console
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 comment = params as in Vitkova paper
@@ -37,7 +38,7 @@ dt = 1800                    # [s] <float> real time difference between simulati
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
 ;sampling_rate = 12*(2520000-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
-sampling_rate = 13560         # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 13560   #1356      # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -117,7 +118,7 @@ color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup  # 1.4166 * m_jup +-0.0649
 radius = 1.012 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445 # 0.0445 +-0.001
-i = 87.8 # 84.74 +-0.29
+i = 88.8 # 84.74 +-0.29
 P = 3600 * 24 * 40.986  # 40.5634  +-0.0366 valid for epoch BJD = 2458400
 longitude_of_ascending_node = 0  # Ω unknown
 argument_of_periapsis = 93.5  # 93.5 +-6
