--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -38,7 +38,7 @@ dt = 1800                    # [s] <float> real time difference between simulati
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
 ;sampling_rate = 12*(2520000-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
-sampling_rate = 13560   #1356      # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 1e5#5e4 #13560      # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
