--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -19,26 +19,36 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 hour = 60 * 60
 day = hour * 24
 year = day * 365.25
+
+[Simulation]
 ;verbose = False              # If False, only error messages will be printed to the console
+start_date = 2458400.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation. Often called t0.
+starts = [  2458400, 2458500, 2459400,   2459400.5, 2458400, 2460472.386-100*0.00138888888888889]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [  2458402, 2458502, 2459400.5, 2459402,   2458400, 2460472.999]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [     1800,    1800,     120,    1800,     120,         120]  # [s] <float> real time differences between simulation iterations inside each intervall
+# Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
+# which data will be stored. total_iterations is usually much larger than the parameter frames. So not
+# each simulation iteration will be shown in the video. Instead only 1/sampling_rate of the calculated
+# iterations is used as a frame in the animation. sampling_rate = (total_iterations - 1) // frames + 1
+# (// is integer-division)
+# dt * sampling_rate is the real time difference between 2 frames in the animation.
+# dt is proportional to the velocity of the objects in the animation.
+# Because dt can change between intervalls, so can the animated velocity of objects in the video.
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-comment = params as in Vitkova paper
+comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
-frames = 3330                   # <int> number of frames of video. Proportional to Curvesimulator's run time
+result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file   ### move to simulation ###
+frames = 150                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 50000                   # [s] <float> real time difference between simulation iterations. Proportional to
-                             # the velocity of the objects in the animation. Needs to be small in order to
+dt = 50000                   # [s] <float> real time difference between simulation iterations outside of   ### move to simulation ###
+                             # the intervalls defined by the parameters starts and ends.
+                             # Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
-                             # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
-                             # your orbits change after a few rotations then you probably need a smaller value.
-                             # dt * sampling_rate is the real time difference between 2 frames in the animation.
-                             # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
-                             # order to generate an accurate light curve.
-;sampling_rate = 12*(2520000-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
-sampling_rate = 20#4281#1e5 #13560      # <int> Calculating the physics is much faster than animating it. Therefore only
+                             # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
+;sampling_rate = 20#4281#1e5 #13560      # <int> Calculating the physics is much faster than animating it. Therefore only  ### do not read from file anymore ###
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -63,10 +73,7 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # relative to plot scope. radius=100 would fill the whole plot.
                              # If necessary, scaling will be done logarithmically instead of linear.
 
-[Plot]
-start_date = 2458400.011       # <float> Barycentric Julian Date (TDB) at the start of the simulation. Often called t0.
-;start_date = 2458400.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation. Often called t0.
-;adjust the following plot parameters in this section only if the plots do not fit well on your screen
+[Plot]                       # Adjust the plot parameters in this section only if the plots do not fit your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
