--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -22,10 +22,10 @@ year = day * 365.25
 
 [Simulation]
 ;verbose = False              # If False, only error messages will be printed to the console
-start_date = 2458400.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation. Often called t0.
-starts = [  2458400, 2458500, 2459400,   2459400.5, 2458400, 2460472.386-100*0.00138888888888889]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [  2458402, 2458502, 2459400.5, 2459402,   2458400, 2460472.999]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [     1800,    1800,     120,    1800,     120,         120]  # [s] <float> real time differences between simulation iterations inside each intervall
+start_date = 2458400.011       # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
+starts = [2458401, 2459900, 2460472.386-100*0.00138888888888889]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458404, 2459904, 2460474.2]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [   1800,    1800,       120]  # [s] <float> real time differences between simulation iterations inside each intervall
 # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
 # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
 # each simulation iteration will be shown in the video. Instead only 1/sampling_rate of the calculated
@@ -39,11 +39,11 @@ dts =    [     1800,    1800,     120,    1800,     120,         120]  # [s] <fl
 comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file   ### move to simulation ###
-frames = 150                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 60                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 50000                   # [s] <float> real time difference between simulation iterations outside of   ### move to simulation ###
+dt = 30000                   # [s] <float> real time difference between simulation iterations outside of   ### move to simulation ###
                              # the intervalls defined by the parameters starts and ends.
                              # Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
@@ -78,8 +78,8 @@ figure_width = 16            # <int>   width of figure which contains all plots 
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
 ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
-red_dot_height = 1/20        # <float> relative height of red dot in light curve plot
-red_dot_width = 1/235        # <float> relative width of red dot in light curve plot
+red_dot_height = 1/20        # <float> height of red dot in light curve plot relative to height of y-axis
+red_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
 
 
 [TOI-4504]
