--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -21,11 +21,14 @@ day = hour * 24
 year = day * 365.25
 
 [Simulation]
+result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
+                             # Comment out this parameter if you do not need the results
+comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
 ;verbose = False              # If False, only error messages will be printed to the console
-start_date = 2458400.011       # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-starts = [2458401, 2459900, 2460472.386-100*0.00138888888888889]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458404, 2459904, 2460474.2]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [   1800,    1800,       120]  # [s] <float> real time differences between simulation iterations inside each intervall
+start_date = 2458400.0       # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
+starts = [2458400, 2458400+82.8*10, 2458400+82.8*20, 2458400+82.8*30]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458406, 2458406+82.8*10, 2458406+82.8*20, 2458406+82.8*30]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [      120,       120,       120,       120]  # [s] <float> real time differences between simulation iterations inside each intervall
 # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
 # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
 # each simulation iteration will be shown in the video. Instead only 1/sampling_rate of the calculated
@@ -36,10 +39,9 @@ dts =    [   1800,    1800,       120]  # [s] <float> real time differences betw
 # Because dt can change between intervalls, so can the animated velocity of objects in the video.
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
-video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file   ### move to simulation ###
-frames = 60                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+                             # Comment out this parameter to prevent video generation.
+frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
