--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -16,27 +16,39 @@ m_jup = 1.8981246e27         # [kg]  <float> Jupiter mass
 r_earth = 6.378135e6         # [m]   <float> Earth radius R⊕
 m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular) V⊕
-hour = 60 * 60
-day = hour * 24
-year = day * 365.25
+hour = 60 * 60               # [s] One hour in seconds
+day = hour * 24              # [s] One day in seconds
+year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 
-[Simulation]
+[Results]
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
                              # Comment out this parameter if you do not need the results
+result_dt = 100              # Real time differences between simulation iterations
+                             # This parameter is only used after the main simulation for finding the precise values for the transit parameters
 comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
-;verbose = False              # If False, only error messages will be printed to the console
-start_date = 2458400.0       # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-starts = [2458400, 2458400+82.8*10, 2458400+82.8*20, 2458400+82.8*30]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+
+[Simulation]
+dt = 20000                   # [s] <float> real time difference between simulation iterations outside of
+                             # the intervalls defined by the parameters starts and ends.
+                             # Needs to be small enough in order to calculate with sufficient
+                             # precision when objects are close to each other.
+                             # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
+                             # Set dt to a relatively high value, when running MCMC
+                             # Set dt to a relatively low value, when you want exact transit times in the result file.
+start_date = 2458400       # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
+starts = [2458400.5, 2458400+82.8*10, 2458400+82.8*20, 2458400+82.8*30]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2458406, 2458406+82.8*10, 2458406+82.8*20, 2458406+82.8*30]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [      120,       120,       120,       120]  # [s] <float> real time differences between simulation iterations inside each intervall
-# Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
-# which data will be stored. total_iterations is usually much larger than the parameter frames. So not
-# each simulation iteration will be shown in the video. Instead only 1/sampling_rate of the calculated
-# iterations is used as a frame in the animation. sampling_rate = (total_iterations - 1) // frames + 1
-# (// is integer-division)
-# dt * sampling_rate is the real time difference between 2 frames in the animation.
-# dt is proportional to the velocity of the objects in the animation.
-# Because dt can change between intervalls, so can the animated velocity of objects in the video.
+dts =    [121, 122, 123, 124]  # [s] <float> real time differences between simulation iterations inside each intervall
+                             # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
+                             # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
+                             # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
+                             # each simulation iteration will be shown in the video. Instead only 1/sampling_rate of the calculated
+                             # iterations is used as a frame in the animation. sampling_rate = (total_iterations - 1) // frames + 1
+                             # (// is integer-division)
+                             # dt * sampling_rate is the real time difference between 2 frames in the animation.
+                             # dt is proportional to the velocity of the objects in the animation.
+                             # Because dt can change between intervalls, so can the animated velocity of objects in the video.
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 ;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
@@ -45,15 +57,6 @@ frames = 60                  # <int> number of frames of video. Proportional to 
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 30000                   # [s] <float> real time difference between simulation iterations outside of   ### move to simulation ###
-                             # the intervalls defined by the parameters starts and ends.
-                             # Needs to be small in order to
-                             # calculate with sufficient precision when objects are close to each other.
-                             # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
-;sampling_rate = 20#4281#1e5 #13560      # <int> Calculating the physics is much faster than animating it. Therefore only  ### do not read from file anymore ###
-                             # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
-                             # In other words: The simulation's number of calculated iterations and also the
-                             # length of the array with light curve data will be equal to frames * sampling_rate.
 
 [Scale]                      # This section controls the size of objects in the animation.
 scope_left = 0.4 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
