--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -21,10 +21,10 @@ day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 
 [Results]
-result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
+;result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
                              # Comment out this parameter if you do not need the results
-result_dt = 100              # Real time differences between simulation iterations
-                             # This parameter is only used after the main simulation for finding the precise values for the transit parameters
+result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
+                             # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
 ;verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
 
@@ -36,10 +36,13 @@ dt = 20000                   # [s] <float> real time difference between simulati
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-start_date = 2458400       # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-starts = [2458400.5, 2458400+82.8*10, 2458400+82.8*20, 2458400+82.8*30]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458406, 2458406+82.8*10, 2458406+82.8*20, 2458406+82.8*30]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [121, 122, 123, 124]  # [s] <float> real time differences between simulation iterations inside each intervall
+start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
+starts = [2458500.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [12000, 12000]               # [s] <float> real time differences between simulation iterations inside each intervall
+;starts = [2458400.5, 2458400+82.8*10, 2458400+82.8*20, 2458400+82.8*30]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458406, 2458406+82.8*10, 2458406+82.8*20, 2458406+82.8*30]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;dts =    [120, 120, 120, 120]  # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
