--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -21,7 +21,7 @@ day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 
 [Results]
-;result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
                              # Comment out this parameter if you do not need the results
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
@@ -30,16 +30,15 @@ comment = params as in Vitkova paper  # You can use this comment for example as 
 
 [Simulation]
 dt = 20000                   # [s] <float> real time difference between simulation iterations outside of
-                             # the intervalls defined by the parameters starts and ends.
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
-                             # Set dt to a relatively high value, when running MCMC
+                             # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 starts = [2458500.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [12000, 12000]               # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
 ;starts = [2458400.5, 2458400+82.8*10, 2458400+82.8*20, 2458400+82.8*30]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458406, 2458406+82.8*10, 2458406+82.8*20, 2458406+82.8*30]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [120, 120, 120, 120]  # [s] <float> real time differences between simulation iterations inside each intervall
@@ -53,8 +52,13 @@ dts =    [12000, 12000]               # [s] <float> real time differences betwee
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
 
+[Fitting]
+flux_file = ../research/star_systems/TOI-4504/lightkurve/all_p.csv  # <string> file with flux measurements (real data)
+                             # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
+                             # Comment out this parameter if you do not want to fit the simulation to real data
+
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
                              # Comment out this parameter to prevent video generation.
 frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
