--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -26,7 +26,7 @@ result_file = ../results/TOI-4504.json  # <string> simulation results like trans
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
-;verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]
 dt = 20000                   # [s] <float> real time difference between simulation iterations outside of
@@ -36,12 +36,12 @@ dt = 20000                   # [s] <float> real time difference between simulati
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-starts = [2458500.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
-;starts = [2458400.5, 2458400+82.8*10, 2458400+82.8*20, 2458400+82.8*30]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458406, 2458406+82.8*10, 2458406+82.8*20, 2458406+82.8*30]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;dts =    [120, 120, 120, 120]  # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2458400.011]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458501]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [1800]               # [s] <float> real time differences between simulation iterations inside each intervall
+;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -53,9 +53,13 @@ dts =    [120, 120]               # [s] <float> real time differences between si
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
 
 [Fitting]
-flux_file = ../research/star_systems/TOI-4504/lightkurve/all_p.csv  # <string> file with flux measurements (real data)
+flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # Comment out this parameter if you do not want to fit the simulation to real data
+walkers = 32                 # number of mcmc chains
+steps = 10                   # number of mcmc steps
+burn_in = 0                  # number_of_points_disregarded (burn-in phase)
+
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
