--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -56,6 +56,7 @@ dts =    [1800]               # [s] <float> real time differences between simula
 flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # Comment out this parameter if you do not want to fit the simulation to real data
+                             # While fitting, no result file and no video will be generated.
 walkers = 32                 # number of mcmc chains
 steps = 10                   # number of mcmc steps
 burn_in = 0                  # number_of_points_disregarded (burn-in phase)
