--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -63,12 +63,6 @@ ylim = 1.0                   # <float> left and right view both show y-values be
 red_dot_height = 1/13        # <float> relative height of red dot in light curve plot
 red_dot_width = 1/200        # <float> relative width of red dot in light curve plot
 
-# [Debug]                      # For debugging purposes only. Ignore the whole section if you aren't
-                             # a curvesimulator developer.
-# debug_L = [0, 20, 40, 88]  # run funktion debug_print_points for these values of L.
-                             # First value should be 0.
-# debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for these values of L.
-                                         # First value should be 0.
 
 # all following sections define physical bodies in the simulation
 # the section names define the names of the bodies
@@ -82,8 +76,8 @@ radius = 1.0 * r_sun                 # [m]
 luminosity = 1.0 * l_sun             # [W]
 limb_darkening_parameter_type = a    # q (Kipping parameters q1,q2) or
                                      # u (quadratic law parameters u1,u2) or
-                                     # a (polynomial coefficients a0,a1,a2)
-limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients. Here a0, a1, a2
+                                     # a (polynomial coefficients a1,a2. Do not provide a0.)
+!limb_darkening = [0.9, -0.2]         # Limb darkening coefficients. Here a1, a2
 
 
 [SecondaryStar]
@@ -94,7 +88,7 @@ radius = 0.7 * r_sun                 # [m]
 luminosity = 0.6 * l_sun             # [W]
 limb_darkening_parameter_type = q    # q (Kipping parameters) or
                                      # u (quadratic law parameters u1,u2) or
-                                     # a (polynomial coefficients a0,a1,a2)
+                                     # a (polynomial coefficients a1,a2. Do not provide a0.)
 limb_darkening = [0.5, 0.3]          # Limb darkening coefficients. Here q1, q2
 e = 0.8                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
