--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -3,9 +3,9 @@
 ;Michaela Vitkova et al
 ;https://arxiv.org/abs/2412.05609
 
-[Astronomical Constants]
-;do not edit this section
-;you may use the astronomical constants defined in this section in all following sections, e.g. scope_left = 1.9 * au
+[Astronomical Constants]     # Do not edit this section!
+                             # You may use the astronomical constants defined in this section in
+                             # all following sections, e.g. scope_left = 1.9 * au
 g  = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015
 au = 1.495978707e11          # [m]   <float> astronomical unit
 r_sun = 6.96342e8            # [m]   <float> solar radius
@@ -20,24 +20,24 @@ hour = 60 * 60               # [s] One hour in seconds
 day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 
-[Results]
+[Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
-                             # Comment out this parameter if you do not need the results
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
-verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+;verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
 
-[Simulation]
+[Simulation]                 # Time intervalls and time steps of the simulation
+                             # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
+start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 20000                   # [s] <float> real time difference between simulation iterations outside of
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-starts = [2458400.011]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458501]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+starts = [2458400.5]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458404]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 dts =    [1800]               # [s] <float> real time differences between simulation iterations inside each intervall
 ;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
@@ -52,10 +52,10 @@ dts =    [1800]               # [s] <float> real time differences between simula
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
 
-[Fitting]
-flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
+[Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
+                             # Comment out the first parameter if you do not want to fit the simulation to real data
+;flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
-                             # Comment out this parameter if you do not want to fit the simulation to real data
                              # While fitting, no result file and no video will be generated.
 walkers = 32                 # number of mcmc chains
 steps = 10                   # number of mcmc steps
@@ -63,8 +63,8 @@ burn_in = 0                  # number_of_points_disregarded (burn-in phase)
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
+                             # Comment out the first parameter to prevent video generation.
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-                             # Comment out this parameter to prevent video generation.
 frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
@@ -90,7 +90,7 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # relative to plot scope. radius=100 would fill the whole plot.
                              # If necessary, scaling will be done logarithmically instead of linear.
 
-[Plot]                       # Adjust the plot parameters in this section only if the plots do not fit your screen
+[Plot]                       # Adjust the plot parameters in this section only if the plots in the video do not fit your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
@@ -102,10 +102,11 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 [TOI-4504]
 body_type = star
 color = 0.99, 0.99, 0.99
-mass = (0.885 - 0 * 0.05) * m_sun       # +-0.05
+mass = 0.885 * m_sun       # +-0.05
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
-limb_darkening = [0.4765, 0.3495]  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
@@ -126,24 +127,24 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 [TOI-4504c]
 body_type = planet
 color = 0.99, 0.99, 0.01
-mass = (3.7672 - 0 * 0.18) * m_jup  # +-0.18
+mass = 3.7672 * m_jup  # +-0.18
 radius = 0.9897 * r_jup
-e = 0.0320 - 0 * 0.0015  # +-0.0015
-i = 89.69 - 0 * 0.03  # +-0.03
-P = 3600 * 24 * (82.5438 - 0 * 0.0163) # valid for epoch BJD = 2458400    +-0.0163
-longitude_of_ascending_node = 0 + 0 * 1  # Ω +-1
-argument_of_periapsis = 270.9 -0 * 2.1 # 270.9 +-2.1???  ω
-ma = 173.1 - 0 * 2  # +-2
+e = 0.0320  # +-0.0015
+i = 89.69, 80, 100 # +-0.03
+P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400    +-0.0163 days
+longitude_of_ascending_node = 0  # Ω +-1
+argument_of_periapsis = 270.9 # +-2.1???  ω
+ma = 173.1  # +-2
 
 
 [TOI-4504d]
 body_type = planet
 color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup  # 1.4166 * m_jup +-0.0649
+mass = 1.4166 * m_jup  # +-0.0649
 radius = 1.012 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445 # 0.0445 +-0.001
-i = 88.8 # 84.74 +-0.29
-P = 3600 * 24 * 40.986  # 40.5634  +-0.0366 valid for epoch BJD = 2458400
+e = 0.0445  # +-0.001
+i = 88.8  # 84.74 +-0.29
+P = 3600 * 24 * 40.986  # valid for epoch BJD = 2458400    +-0.0366 days
 longitude_of_ascending_node = 0  # Ω unknown
-argument_of_periapsis = 93.5  # 93.5 +-6
+argument_of_periapsis = 93.5  # +-6
 ma = 270  # 280.6 +-7.4
