--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -25,7 +25,7 @@ result_file = ../results/TOI-4504.json  # <string> simulation results like trans
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
-;verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
+verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -54,7 +54,7 @@ dts =    [1800]               # [s] <float> real time differences between simula
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-;flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
+flux_file = ../research/star_systems/TOI-4504/lightkurve/TOI4504_88+89_reduced_normalized_d_transits.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 walkers = 32                 # number of mcmc chains
