--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -94,8 +94,8 @@ e = 0.8                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
 P = 3600 * 24 * 30                   # [s] Period
-longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
+Omega = 0      # [deg] Ω: longitude of ascending node
+pomega = 0           # [deg] ϖ: longitude of periapsis
 nu = 180                             # [deg] true anomaly.
 
 
@@ -121,9 +121,9 @@ a = 1.5 * au                         # [m] semi-major axis
 #P = 3600 * 24 * 365.25               # [s] Period
 
 # Two of the following three parameters have to be provided:
-longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-#argument_of_periapsis = 0            # [deg] ω: argument of periapsis
+Omega = 0      # [deg] Ω: longitude of ascending node
+pomega = 0           # [deg] ϖ: longitude of periapsis
+#omega = 0            # [deg] ω: argument of periapsis
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
 #L = 0                                # [deg] mean longitude
