--- a/configurations/Occultquad-Test.ini
+++ b/configurations/Occultquad-Test.ini
@@ -93,7 +93,7 @@ radius = 0.1 * r_sun                 # [m]
 e = 0.0                              # [1] eccentricity
 i = 90.0                             # [deg] inclination.
 a = 0.1505 * au                         # [m] semi-major axis
-longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
+Omega = 0      # [deg] Ω: longitude of ascending node
+pomega = 0           # [deg] ϖ: longitude of periapsis
 nu = 90                              # [deg] true anomaly.
 
