--- a/configurations/SolarSystem.ini
+++ b/configurations/SolarSystem.ini
@@ -103,9 +103,9 @@ a = 0.38709927 * au                  # [m] semi-major axis
 #P = 3600 * 24 * 365.25              # [s] Period
 
 # Two of the following three parameters have to be provided:
-longitude_of_ascending_node = 48.33076593  # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 77.45779628       # [deg] ϖ: longitude of periapsis
-#argument_of_periapsis = 0                 # [deg] ω: argument of periapsis
+Omega = 48.33076593  # [deg] Ω: longitude of ascending node
+pomega = 77.45779628       # [deg] ϖ: longitude of periapsis
+#omega = 0                 # [deg] ω: argument of periapsis
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
 L = 252.25032350                     # [deg] mean longitude
@@ -128,8 +128,8 @@ e = 0.00677672                             # [1] eccentricity
 ;i = 3.39467605                            # [deg] inclination
 i = 90 - 3.39467605                            # [deg] inclination
 a = 0.72333566 * au                        # [m] semi-major axis
-longitude_of_ascending_node = 76.67984255  # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 131.60246718      # [deg] ϖ: longitude of periapsis
+Omega = 76.67984255  # [deg] Ω: longitude of ascending node
+pomega = 131.60246718      # [deg] ϖ: longitude of periapsis
 L = 181.97909950                           # [deg] mean longitude
 
 [Earth]
@@ -141,8 +141,8 @@ e = 0.01671022                             # [1] eccentricity
 ;i = -0.00001531                        # [deg] inclination
 i = 90 + 0.00001531                        # [deg] inclination
 a = 1.00000011 * au                        # [m] semi-major axis
-longitude_of_ascending_node = -11.26064    # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 102.94719         # [deg] ϖ: longitude of periapsis
+Omega = -11.26064    # [deg] Ω: longitude of ascending node
+pomega = 102.94719         # [deg] ϖ: longitude of periapsis
 L = 100.46435                              # [deg] mean longitude
 
 [Mars]
@@ -154,8 +154,8 @@ e = 0.09339410                             # [1] eccentricity
 ;i = 1.84969142                            # [deg] inclination
 i = 90 - 1.84969142                            # [deg] inclination
 a = 1.52371034 * au                        # [m] semi-major axis
-longitude_of_ascending_node = 49.55953891  # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = -23.94362959      # [deg] ϖ: longitude of periapsis
+Omega = 49.55953891  # [deg] Ω: longitude of ascending node
+pomega = -23.94362959      # [deg] ϖ: longitude of periapsis
 L = -4.55343205                            # [deg] mean longitude
 
 [Jupiter]
@@ -167,8 +167,8 @@ e = 0.04838624                             # [1] eccentricity
 ;i = 1.30439695                            # [deg] inclination
 i = 90 - 1.30439695                            # [deg] inclination
 a = 5.20288700 * au                        # [m] semi-major axis
-longitude_of_ascending_node = 100.47390909 # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 14.72847983       # [deg] ϖ: longitude of periapsis
+Omega = 100.47390909 # [deg] Ω: longitude of ascending node
+pomega = 14.72847983       # [deg] ϖ: longitude of periapsis
 L = 34.39644051                            # [deg] mean longitude
 
 [Saturn]
@@ -180,8 +180,8 @@ e = 0.05386179                             # [1] eccentricity
 ;i = 2.48599187                            # [deg] inclination
 i = 90 - 2.48599187                            # [deg] inclination
 a = 9.53667594 * au                        # [m] semi-major axis
-longitude_of_ascending_node = 113.66242448 # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 92.59887831       # [deg] ϖ: longitude of periapsis
+Omega = 113.66242448 # [deg] Ω: longitude of ascending node
+pomega = 92.59887831       # [deg] ϖ: longitude of periapsis
 L = 49.95424423                            # [deg] mean longitude
 
 [Uranus]
@@ -193,8 +193,8 @@ e = 0.04725744                             # [1] eccentricity
 ;i = 0.77263783                            # [deg] inclination
 i = 90 - 0.77263783                            # [deg] inclination
 a = 19.18916464 * au                       # [m] semi-major axis
-longitude_of_ascending_node = 74.01692503  # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 170.95427630      # [deg] ϖ: longitude of periapsis
+Omega = 74.01692503  # [deg] Ω: longitude of ascending node
+pomega = 170.95427630      # [deg] ϖ: longitude of periapsis
 L = 313.23810451                           # [deg] mean longitude
 
 [Neptun]
@@ -206,8 +206,8 @@ e = 0.00859048                             # [1] eccentricity
 ;i = 1.77004347                            # [deg] inclination
 i = 90 - 1.77004347                            # [deg] inclination
 a = 30.06992276 * au                       # [m] semi-major axis
-longitude_of_ascending_node = 131.78422574 # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 44.96476227       # [deg] ϖ: longitude of periapsis
+Omega = 131.78422574 # [deg] Ω: longitude of ascending node
+pomega = 44.96476227       # [deg] ϖ: longitude of periapsis
 L = -55.12002969                           # [deg] mean longitude
 
 ; https://ssd.jpl.nasa.gov/planets/approx_pos.html Table 1
