--- a/configurations/TIC470710327_old.ini
+++ b/configurations/TIC470710327_old.ini
@@ -58,9 +58,9 @@ luminosity = 2**3.14 * l_sun             # [W]
 ;a = 1.00000011 * au                      # [m] semi-major axis
 e = 0.0                                  # [1] eccentricity
 i = 0.0                                  # [deg] inclination
-;longitude_of_ascending_node = -11.26064  # [deg] Ω: longitude of ascending node
-;argument_of_periapsis =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
-;longitude_of_periapsis = 102.94719       # [deg] ϖ: longitude of periapsis
+;Omega = -11.26064  # [deg] Ω: longitude of ascending node
+;omega =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
+;pomega = 102.94719       # [deg] ϖ: longitude of periapsis
 ;L = 100.46435                            # [deg] mean longitude
 ;ma =                                     # [deg] mean anomaly, ma = L  - ϖ
 ;ea =                                     # [deg] eccentric anomaly
@@ -81,9 +81,9 @@ luminosity = 2**3.08 * l_sun             # [W]
 ;a = 1.00000011 * au                      # [m] semi-major axis
 e = 0.0                                  # [1] eccentricity
 i = 0.0                                  # [deg] inclination
-;longitude_of_ascending_node = -11.26064  # [deg] Ω: longitude of ascending node
-;argument_of_periapsis =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
-;longitude_of_periapsis = 102.94719       # [deg] ϖ: longitude of periapsis
+;Omega = -11.26064  # [deg] Ω: longitude of ascending node
+;omega =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
+;pomega = 102.94719       # [deg] ϖ: longitude of periapsis
 ;L = 100.46435                            # [deg] mean longitude
 ;ma =                                     # [deg] mean anomaly, ma = L  - ϖ
 ;ea =                                     # [deg] eccentric anomaly
@@ -104,9 +104,9 @@ luminosity = 2**4.79 * l_sun             # [W]
 ;a = 1.00000011 * au                      # [m] semi-major axis
 e = 0.3                                  # [1] eccentricity
 i = 16.6                                 # [deg] inclination
-;longitude_of_ascending_node = -11.26064  # [deg] Ω: longitude of ascending node
-;argument_of_periapsis =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
-;longitude_of_periapsis = 102.94719       # [deg] ϖ: longitude of periapsis
+;Omega = -11.26064  # [deg] Ω: longitude of ascending node
+;omega =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
+;pomega = 102.94719       # [deg] ϖ: longitude of periapsis
 ;L = 100.46435                            # [deg] mean longitude
 ;ma =                                     # [deg] mean anomaly, ma = L  - ϖ
 ;ea =                                     # [deg] eccentric anomaly
