--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -118,8 +118,8 @@ radius = 2.691 * r_earth
 e = 0.0
 i = 87.4
 P = 3600 * 24 * 2.42614
-longitude_of_ascending_node = 0
-argument_of_periapsis = 90
+Omega = 0
+omega = 90
 T = 0
 t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
@@ -132,8 +132,8 @@ radius = 0.9897 * r_jup
 e = 0.0320  # +-0.0015
 i = 89.69, 80, 100 # +-0.03
 P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400    +-0.0163 days
-longitude_of_ascending_node = 0  # Ω +-1
-argument_of_periapsis = 270.9 # +-2.1???  ω
+Omega = 0  # Ω +-1
+omega = 270.9 # +-2.1???  ω
 ma = 173.1  # +-2
 
 
@@ -145,6 +145,6 @@ radius = 1.012 * r_jup  # 0.7156 * r_jup assuming TOI-4504d has the same density
 e = 0.0445  # +-0.001
 i = 88.8  # 84.74 +-0.29
 P = 3600 * 24 * 40.986  # valid for epoch BJD = 2458400    +-0.0366 days
-longitude_of_ascending_node = 0  # Ω unknown
-argument_of_periapsis = 93.5  # +-6
+Omega = 0  # Ω unknown
+omega = 93.5  # +-6
 ma = 270  # 280.6 +-7.4
