--- a/configurations/TOI-4504_out.ini
+++ b/configurations/TOI-4504_out.ini
@@ -85,8 +85,8 @@ radius = 2.691 * r_earth
 e = 0.0
 i = 87.4
 P = 3600 * 24 * 2.42614
-longitude_of_ascending_node = 0
-argument_of_periapsis = 90
+Omega = 0
+omega = 90
 T = 0
 t = 3600 * 24 * 638.458  # t0 [BJD] 2459038.458
 
@@ -100,8 +100,8 @@ radius = 0.9897 * r_jup
 e = 0.0320
 i = 89.69
 P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400
-longitude_of_ascending_node = -0.8
-argument_of_periapsis = 90  # 270.9???
+Omega = -0.8
+omega = 90  # 270.9???
 T = 0
 t = 3600 * 24 * -1.4086  # first Transit T0 BJD 2458401.4086
 
@@ -114,8 +114,8 @@ radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445
 i = 84.74
 P = 3600 * 24 * 40.5634  # valid for epoch BJD = 2458400
-longitude_of_ascending_node = 0
-argument_of_periapsis = 90  # 98.3???
+Omega = 0
+omega = 90  # 98.3???
 T = 0
 t = 0  # Where is planet d at epoch BJD = 2458400???
 
