--- a/configurations/Transit.ini
+++ b/configurations/Transit.ini
@@ -90,11 +90,11 @@ radius = 1.0 * r_jup                 # [m]
 a = 1.0 * au                         # [m] semi-major axis
 e = 0.0                              # [1] eccentricity
 i = 90.235                             # [deg] inclination. 90° means we see the orbit edge-on.
-longitude_of_ascending_node = 0.0    # [deg] Ω: longitude of ascending node
-longitude_of_periapsis = 0.0         # [deg] ϖ: longitude of periapsis
+Omega = 0.0    # [deg] Ω: longitude of ascending node
+pomega = 0.0         # [deg] ϖ: longitude of periapsis
 nu = 269                             # [deg] mean longitude
 
-# argument_of_periapsis = 0          # [deg] ω: argument of periapsis
+# omega = 0          # [deg] ω: argument of periapsis
 # nu, ma, ea, T:   Only true anomaly or mean_anomaly or eccentric_anomaly or time_of_periapsis has to be provided.
 # ma can be calculated from ϖ and L.
 # ω can be calculated from ϖ and Ω.
