--- a/configurations/Sim001.ini
+++ b/configurations/Sim001.ini
@@ -87,8 +87,8 @@ radius = 0.1 * r_jup
 e = 0.0
 i = 81.0
 P = 3600 * 24 * 50.0
-longitude_of_ascending_node = 0.0
-argument_of_periapsis = 0.0
+Omega = 0.0
+omega = 0.0
 nu = 90.0
 
 
@@ -100,6 +100,6 @@ radius = 0.1 * r_jup
 e = 0.0
 i = 90.0
 P = 3600 * 24 * 5000.0
-longitude_of_ascending_node = 0.0
-argument_of_periapsis = 0.0
+Omega = 0.0
+omega = 0.0
 nu = 150.0
