--- a/configurations/TOI-4504.sec89.ini
+++ b/configurations/TOI-4504.sec89.ini
@@ -88,8 +88,8 @@ limb_darkening_parameter_type = q
 ;e = 0.0
 ;i = 87.4
 ;P = 3600 * 24 * 2.42614
-;longitude_of_ascending_node = 0
-;argument_of_periapsis = 90
+;Omega = 0
+;omega = 90
 ;T = 0
 ;t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
@@ -102,8 +102,8 @@ radius = 0.9897 * r_jup
 e = 0.0320 - 0 * 0.0015  # +-0.0015
 i = 89.69 - 0 * 0.03  # +-0.03
 P = 3600 * 24 * (82.5438 - 0 * 0.0163) # valid for epoch BJD = 2458400    +-0.0163
-longitude_of_ascending_node = 0 + 0 * 1  # Ω +-1
-argument_of_periapsis = 270.9 -0 * 2.1 # 270.9 +-2.1???  ω
+Omega = 0 + 0 * 1  # Ω +-1
+omega = 270.9 -0 * 2.1 # 270.9 +-2.1???  ω
 ma = 173.1 - 0 * 2  # +-2
 
 
@@ -115,6 +115,6 @@ radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445 - 0 * 0.001 # +-0.001
 i = 88.8  # Vitkova 84.74
 P = 3600 * 24 * (40.5634 - 0 * 0.0366) # valid for epoch BJD = 2458400    +-0.0366
-longitude_of_ascending_node = 0  # Ω unknown
-argument_of_periapsis = 93.5 - 0 * 6  # +-6
+Omega = 0  # Ω unknown
+omega = 93.5 - 0 * 6  # +-6
 ma = 142.0 # Vitkova 280.6
